# Ccraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.ini
maps/: default_map.db  test_map.db
shaders/: block_fragment.glsl  block_vertex.glsl  block_warp_vertex.glsl  chunk_fragment.glsl  chunk_vertex.glsl  cube_fragment.glsl  cube_vertex.glsl  deferred1_fragment.glsl  deferred1_vertex.glsl  deferred2_fragment.glsl  handitem_fragment.glsl  line_fragment.glsl  line_vertex.glsl  pip_fragment.glsl  screen_fragment.glsl  shadow_fragment.glsl  shadow_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  sun_fragment.glsl  sun_vertex.glsl  test_fragment.glsl  test_vertex.glsl
src/: block.c  block.h  camera.c  camera.h  camera_controller.c  camera_controller.h  chuck.c  chunk.h  config.c  config.h  db.c  db.h  fastnoiselite_impl.c  framebuffer.c  framebuffer.h  hashmap.h  linked_list.h  main.c  map.c  map.h  mem_debugger.h  noise_generator.c  noise_generator.h  perlin_noise.c  perlin_noise.h  player.c  player.h  player_controller.c  player_controller.h  player_physics.c  player_physics.h  shader.c  shader.h  texture.c  texture.h  thread_worker.c  thread_worker.h  time_measure.c  time_measure.h  ui.c  (+7 more)
src/camera/: camera.c  camera.h  camera_controller.c  camera_controller.h
src/map/: block.c  block.h  chunk.c  chunk.h  map.c  map.h  thread_worker.c  thread_worker.h
src/player/: player.c  player.h  player_controller.c  player_controller.h  player_physics.c  player_physics.h
src/renderer/: block_wireframe.c  block_wireframe.h  crosshair.c  crosshair.h  hand_item_2d.c  hand_item_2d.h
